fix: display of todo HTML-el on tablet, mobile screens

--- a/src/app/assets/styles/_media.scss
+++ b/src/app/assets/styles/_media.scss
@@ -49,6 +49,7 @@
         margin: 0 0 15px 0;
     }
     .page__content {
+        flex: 1;
         padding: 15px 35px 15px 35px;
         position: static;
     }
@@ -92,6 +93,12 @@
 }
 
 @media screen and (max-width: 425px) {
+    .todo {
+        height: calc(100vh - 305px); 
+    }
+    .todo.minimized {
+        height: calc(100vh - 350px);
+    }
     .todo__item {
         flex-direction: column;
         align-items: flex-start;
